--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -71,3 +71,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
+h1{
+  color: var(--color-heading);
+}
